--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
       margin: 0px;
     }
     body {
-      background-color: rgb(255, 230, 208);
-      transform: perspective(1400px) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-      transform-style: preserve-3d;
+      background-color: black;
+    }
+    .main {
+      background-color: white;
+      margin-left: 10%;
+      margin-right: 10%;
+      padding: 15px
     }
     button {
       width: 300px;
@@ -44,10 +48,6 @@
       font-size: 20px;
       align-items: center;
       margin: 15px;
-    }
-    .main {
-      padding-left: 20%;
-      padding-right: 20%;
     }
     .buttons {
       text-align: center;
@@ -67,7 +67,7 @@
     A game for people
   </h2>
     <p>
-      Wake up your mind with a quick round of PROGRESSION, the game of champions.
+      Challenge your mind and your spirit with a round of PROGRESSION, the game of champions.
     </p>
     <div class="buttons">
       <button id="play">
