--- a/gameplay.html
+++ b/gameplay.html
@@ -179,7 +179,7 @@
       ["Ming Dynasty", "1368-1677 CE"]
     ];
 
-var gamePlay = function() {
+
     //define category attributes --> [items, formal name, orderBy, orderFrom]
     var categories = [
       [us_presidents, "U.S. Presidents", "dates in office", "earliest to most recent"],
@@ -295,9 +295,7 @@ var gamePlay = function() {
       };
     };
     submitButton.addEventListener("click", onSubmitClick);
-};
-    
-    gamePlay();
+
 
   //what happens when you click the Next button
   var nextButton = buttons.getElementById("next");
@@ -309,7 +307,7 @@ X    1. grader
 X    2. "submit" button goes away when clicked
     3. "next" button loops back to beginning
     4. linkage to google sheets
-    5. share it with dad
+X    5. share it with dad
     6. styling
     
     Dad's priorities:
